2001-03-06  John Harper  <jsh@eazel.com>

	reviewed by: Darin Adler  <darin@eazel.com>
	
	Fix 7455 (Intermittent crash when opening trash folder)
	* libnautilus-extensions/nautilus-trash-file.c:
	(trash_callback_check_done), (trash_file_call_when_ready):

	Added an "initializing" field to TrashCallback object. This
	is set while connecting the call_when_ready callbacks in
	trash_file_call_when_ready (). trash_callback_check_done ()
	checks this flag and only succeeds when it's false.

2001-03-06  Darin Adler  <darin@eazel.com>

	* README: Updated to refer to gnome-vfs-1-0 branch.

2001-03-06  Eric Fischer  <eric@eazel.com>

	reviewed by: Christian Meyer <chrisime@gnome.org>

	(Bug 7315.  Thanks to Christian Meyer for tracking down
	places where this needed to be fixed.)

	* components/help/converters/gnome-db2html2/Makefile.am:
	* components/help/converters/gnome-info2html2/Makefile.am:
	* cut-n-paste-code/widgets/e-paned/Makefile.am:
	* cut-n-paste-code/widgets/gimphwrapbox/Makefile.am:
	* cut-n-paste-code/widgets/nautilusclist/Makefile.am:
	* libnautilus-extensions/Makefile.am:
	In all of these, change GNOME_CFLAGS to GNOMEUI_CFLAGS so that
	they get the correct #include path for the GTK headers.

2001-03-06  Darin Adler  <darin@eazel.com>

	reviewed by: John Sullivan <sullivan@eazel.com>

	Fixed bug 7435 (text view spews complaints whenever a text view is
	destroyed):

	* components/text/nautilus-text-view.c:
	(nautilus_text_view_initialize): Ref the widget that gets text so
	that we can notice if it's destroyed.
	(detach_file): Get rid of unneeded NULL check.
	(nautilus_text_view_destroy): Unref the widget.
	(file_read_callback): Don't insert any text if the widget is
	already destroyed. The widget can be destroyed before the
	NautilusView object is.
	(handle_service_menu_item): Add FIXME about sync. I/O.
	(nautilus_text_view_set_font): Add FIXME about strange font
	handling.

2001-03-06  Dan Mueth  <dan@eazel.com>
